# email-agent

./: Dockerfile  README.md  agent.py  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
__pycache__/: app.cpython-314.pyc.2117856294624
server/: app.py
